Agentforce/force-app/main/default/objects/Opportunity/fields/In_Year_Contractual_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>In_Year_Contractual_Annual_Revenue__c</fullName>
    <description>AD-339 to see the In Year value for Contractual Products on an Opportunity</description>
    <formula>IF(YEAR(Contract_Start_Date__c) = YEAR(Contract_End_Date__c), Annual_Contractual_Revenue__c,
(Annual_Contractual_Revenue__c /365) * Remaining_Days_In_Year__c
			)

		/*	If the same year then show full value, if not the same year then
show the value scaled down to reflect only the amount falling in the starting FY*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-Year Contractual Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>