Agentforce/force-app/main/default/objects/Opportunity/fields/In_Year_GM__c.field-meta.xml
<CustomField>
    <fullName>In_Year_GM__c</fullName>
    <formula>InYearContractualGM__c + In_Year_Ad_hoc_GM__c +  In_Year_Project_GM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-Year GM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>