Agentforce/force-app/main/default/objects/Opportunity/fields/In_Year_Growth__c.field-meta.xml
<CustomField>
    <fullName>In_Year_Growth__c</fullName>
    <formula>IF(YEAR(Contract_Start_Date__c) = YEAR(Contract_End_Date__c), Total_Growth__c,
(Total_Growth__c /365) * Remaining_Days_In_Year__c
)

/* If the same year then show full value, if not the same year then
show the value scaled down to reflect only the amount falling in the starting FY*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-Year Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>