Agentforce/force-app/main/default/objects/Opportunity/fields/In_Year_Project_GM__c.field-meta.xml
<CustomField>
    <fullName>In_Year_Project_GM__c</fullName>
    <description>AD-339 to see the In Year value for Contractual Products on an Opportunity</description>
    <formula>Annual_Project_GM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-Year Project GM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>