Agentforce/force-app/main/default/objects/Opportunity/fields/In_Year_Project_GMPercentage__c.field-meta.xml
<CustomField>
    <fullName>In_Year_Project_GMPercentage__c</fullName>
    <description>AD-339 to see the In Year value for Contractual Products on an Opportunity</description>
    <formula>IF(
  AND(
    In_Year_Project_Annual_Revenue__c &lt;&gt; 0,
    In_Year_Project_GM__c &lt;&gt; 0
  ),
  (In_Year_Project_GM__c / In_Year_Project_Annual_Revenue__c),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-Year Project GM %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>