Agentforce/force-app/main/default/objects/Opportunity/fields/In_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>In_Year_Revenue__c</fullName>
    <formula>In_Year_Contractual_Annual_Revenue__c + In_Year_Ad_hoc_Annual_Revenue__c +  In_Year_Project_Annual_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-Year Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>