Agentforce/force-app/main/default/objects/Opportunity/fields/Include_in_Resource_Planning__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Resource_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if the Bid Team are likely to need to include this Opportunity in their future resource planning</inlineHelpText>
    <label>Include in Resource Planning</label>
    <type>Checkbox</type>
</CustomField>