Agentforce/force-app/main/default/objects/Opportunity/fields/Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Incumbent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incumbent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Incumbent)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>