Agentforce/force-app/main/default/objects/Opportunity/fields/Incumbent_Description__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Description__c</fullName>
    <label>Incumbent Description</label>
    <type>TextArea</type>
</CustomField>