Agentforce/force-app/main/default/objects/Opportunity/fields/Incumbent_Exists__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Exists__c</fullName>
    <description>Determine if Incumbent is populated</description>
    <formula>NOT(
    ISBLANK(Incumbent__c)
)</formula>
    <label>Incumbent Exists</label>
    <type>Checkbox</type>
</CustomField>