Agentforce/force-app/main/default/objects/Opportunity/fields/India_Branch__c.field-meta.xml
<CustomField>
    <fullName>India_Branch__c</fullName>
    <label>India Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Cochin</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Gurgaon</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Indore</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Noida</fullName>
            </value>
            <value>
                <fullName>Panaji</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Thane</fullName>
            </value>
            <value>
                <fullName>Trivandrum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>