Agentforce/force-app/main/default/objects/Opportunity/fields/Individual_Adhoc_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Individual_Adhoc_Revenue_Target__c</fullName>
    <description>AD-901 - currency to capture individual adhoc revenue targets</description>
    <label>Individual Adhoc Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>