Agentforce/force-app/main/default/objects/Opportunity/fields/Individual_Contract_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Individual_Contract_Revenue_Target__c</fullName>
    <description>AD-901 - currency to capture Individual Contract Revenue Target</description>
    <label>Individual Contract Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>