Agentforce/force-app/main/default/objects/Opportunity/fields/Individual_In_Year_Gross_Margin_Target__c.field-meta.xml
<CustomField>
    <fullName>Individual_In_Year_Gross_Margin_Target__c</fullName>
    <description>AD-901 - currency to capture Individual In Year Gross Margin Target</description>
    <label>Individual In-Year Gross Margin Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>