Agentforce/force-app/main/default/objects/Opportunity/fields/Individual_Project_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Individual_Project_Revenue_Target__c</fullName>
    <description>AD-901 - currency to capture individual project revenue target</description>
    <label>Individual Project Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>