Agentforce/force-app/main/default/objects/Opportunity/fields/Individual_Total_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Individual_Total_Revenue_Target__c</fullName>
    <description>AD-901 - formula to capture the individual total revenue target</description>
    <formula>Individual_Adhoc_Revenue_Target__c  +  Individual_Contract_Revenue_Target__c +  Individual_Project_Revenue_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual Total Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>