Agentforce/force-app/main/default/objects/Opportunity/fields/Internal_Debrief__c.field-meta.xml
<CustomField>
    <fullName>Internal_Debrief__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Debrief held internally</description>
    <label>Internal Debrief</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The record selected is not an Internal Debrief. Please select an Internal Debrief.</errorMessage>
        <filterItems>
            <field>Debrief__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Debrief</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Debrief__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_Internal_Debrief</relationshipName>
    <type>Lookup</type>
</CustomField>