Agentforce/force-app/main/default/objects/Opportunity/fields/Internal_Debrief_Exists__c.field-meta.xml
<CustomField>
    <fullName>Internal_Debrief_Exists__c</fullName>
    <description>Identify if internal debrief exists</description>
    <formula>NOT(
ISBLANK(Internal_Debrief__c)
)</formula>
    <label>Internal Debrief Exists</label>
    <type>Checkbox</type>
</CustomField>