Agentforce/force-app/main/default/objects/Opportunity/fields/InYearContractualGM__c.field-meta.xml
<CustomField>
    <fullName>InYearContractualGM__c</fullName>
    <description>AD-339 to see the In Year value for Contractual Products on an Opportunity</description>
    <formula>IF(YEAR(Contract_Start_Date__c) = YEAR(Contract_End_Date__c),Annual_Contractual_GM__c,
(Annual_Contractual_GM__c /365) * Remaining_Days_In_Year__c
			)
			
					/*	If the same year then show full value, if not the same year then
show the value scaled down to reflect only the amount falling in the starting FY*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-Year Contractual GM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>