Agentforce/force-app/main/default/objects/Opportunity/fields/Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner__c</fullName>
    <description>Ticked where Owner is the currently logged in user.</description>
    <formula>OwnerId = $User.Id</formula>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>