Agentforce/force-app/main/default/objects/Opportunity/fields/IT_Requirements__c.field-meta.xml
<CustomField>
    <fullName>IT_Requirements__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IT Requirements</label>
    <referenceTo>IT_Requirements__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>