Agentforce/force-app/main/default/objects/Opportunity/fields/IT_Support__c.field-meta.xml
<CustomField>
    <fullName>IT_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a User who is the IT Support for the Opportunity</description>
    <label>IT Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>