Agentforce/force-app/main/default/objects/Opportunity/fields/Last_Update_Added_f__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_Added_f__c</fullName>
    <formula>Latest_Update__r.CreatedDate</formula>
    <label>Last Update Added</label>
    <type>DateTime</type>
</CustomField>