Agentforce/force-app/main/default/objects/Opportunity/fields/LastStageChangeDate__c.field-meta.xml
<CustomField>
    <fullName>LastStageChangeDate__c</fullName>
    <label>LastStageChangeDate</label>
    <type>Date</type>
</CustomField>