Agentforce/force-app/main/default/objects/Opportunity/fields/Latest_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Latest_Next_Step__c</fullName>
    <description>Created Date of Latest Update record</description>
    <formula>Latest_Update__r.CreatedDate</formula>
    <label>Latest Next Step</label>
    <type>Date</type>
</CustomField>