Agentforce/force-app/main/default/objects/Opportunity/fields/Latest_Update__c.field-meta.xml
<CustomField>
    <fullName>Latest_Update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Update</label>
    <referenceTo>Sales_Update__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>