Agentforce/force-app/main/default/objects/Opportunity/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <description>AD-88 - Store the Id of the Lead that this opportunity was generated from</description>
    <label>Lead ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>