Agentforce/force-app/main/default/objects/Opportunity/fields/Legacy_AS_Additional_Services__c.field-meta.xml
<CustomField>
    <fullName>Legacy_AS_Additional_Services__c</fullName>
    <label>Legacy AS Additional Services</label>
    <type>TextArea</type>
</CustomField>