Agentforce/force-app/main/default/objects/Opportunity/fields/Legacy_Atalian_Target_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Atalian_Target_Id__c</fullName>
    <label>Legacy Atalian Target Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>