Agentforce/force-app/main/default/objects/Opportunity/fields/Legal__c.field-meta.xml
<CustomField>
    <fullName>Legal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a User who is responsible for all Legal activities for the Opportunity</description>
    <label>Legal</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>