Agentforce/force-app/main/default/objects/Opportunity/fields/Liability_Cap__c.field-meta.xml
<CustomField>
    <fullName>Liability_Cap__c</fullName>
    <description>Whether there is a cap on liability</description>
    <inlineHelpText>Whether there is a cap on liability</inlineHelpText>
    <label>Liability Cap</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Completion_Status</valueSetName>
    </valueSet>
</CustomField>