Agentforce/force-app/main/default/objects/Opportunity/fields/Liability_Cap_Value__c.field-meta.xml
<CustomField>
    <fullName>Liability_Cap_Value__c</fullName>
    <description>Required if Liability Cap is either Full or Partial</description>
    <label>Liability Cap Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;2x Contract Value</fullName>
            </value>
            <value>
                <fullName>&gt;2x Contract Value</fullName>
            </value>
            <value>
                <fullName>Uncapped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>