Agentforce/force-app/main/default/objects/Opportunity/fields/Lost_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Lost_Last_12_Months__c</fullName>
    <formula>AND(
TEXT(StageName) = &quot;6. Closed Lost&quot;,
CloseDate &gt;= ADDMONTHS(TODAY(),-12)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ticked if Opportunity was Lost in Last 12 Months</inlineHelpText>
    <label>Lost Last 12 Months</label>
    <type>Checkbox</type>
</CustomField>