Agentforce/force-app/main/default/objects/Opportunity/fields/Lost_Value__c.field-meta.xml
<CustomField>
    <fullName>Lost_Value__c</fullName>
    <label>Lost Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>