Agentforce/force-app/main/default/objects/Opportunity/fields/Maintenance_Order__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maintenance Order</label>
    <type>Checkbox</type>
</CustomField>