Agentforce/force-app/main/default/objects/Opportunity/fields/Major_Bid__c.field-meta.xml
<CustomField>
    <fullName>Major_Bid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Major Bid</label>
    <type>Checkbox</type>
</CustomField>