Agentforce/force-app/main/default/objects/Opportunity/fields/ManagedBuilding__c.field-meta.xml
<CustomField>
    <fullName>ManagedBuilding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ManagedBuilding</label>
    <type>Checkbox</type>
</CustomField>