Agentforce/force-app/main/default/objects/Opportunity/fields/Managers_Email__c.field-meta.xml
<CustomField>
    <fullName>Managers_Email__c</fullName>
    <description>AD-311 - Store the email of the owners manager. Used for email notifications</description>
    <label>Managers Email</label>
    <type>Email</type>
</CustomField>