Agentforce/force-app/main/default/objects/Opportunity/fields/Monthly_Ad_hoc_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Ad_hoc_Revenue__c</fullName>
    <formula>IF(
    Annual_Ad_hoc_Revenue__c = 0,
    0,
    Annual_Ad_hoc_Revenue__c / 
    IF(Contract_Term_Months__c = 0, 1, Contract_Term_Months__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Ad-hoc Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>