Agentforce/force-app/main/default/objects/Opportunity/fields/Monthly_Contractual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Contractual_Revenue__c</fullName>
    <description>Annual Contractual Revenue into Monthly Revenue</description>
    <formula>IF( Contract_Term_Years__c &gt;= 1,
/* If Opp is for 12 or more months then divide by 12. */
Annual_Contractual_Revenue__c / 12,
/* If Opp is less than 12 months then divide by the number of months the Opp covers. */
/* If Opp covers 0 months then divide by 1 anyway to avoid error */
Annual_Contractual_Revenue__c / IF(Contract_Term_Months__c = 0, 1, Contract_Term_Months__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Contractual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>