Agentforce/force-app/main/default/objects/Opportunity/fields/Negotiation_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Outcome__c</fullName>
    <label>Negotiation Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Outcome</valueSetName>
    </valueSet>
</CustomField>