Agentforce/force-app/main/default/objects/Opportunity/fields/Next_Update_Due_f__c.field-meta.xml
<CustomField>
    <fullName>Next_Update_Due_f__c</fullName>
    <formula>Latest_Update__r.Due__c</formula>
    <label>Next Update Due</label>
    <type>Date</type>
</CustomField>