Agentforce/force-app/main/default/objects/Opportunity/fields/No_of_Bid_Supports_Pending_Approval__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bid_Supports_Pending_Approval__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated by DLRS. The number of Bid Supports that have a Sales Lead Approval Status of &apos;Submitted&apos; - indicating the record is pending approval.</description>
    <label># Bid Supports Pending Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>