Agentforce/force-app/main/default/objects/Opportunity/fields/No_of_Capacity_Plans__c.field-meta.xml
<CustomField>
    <fullName>No_of_Capacity_Plans__c</fullName>
    <description>Populated by DLRS. Number of Capacity Plans that relate to this Opportunity. Used as criteria in Flow and on lightning pages.</description>
    <label># Capacity Plans</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>