Agentforce/force-app/main/default/objects/Opportunity/fields/No_of_Competitors__c.field-meta.xml
<CustomField>
    <fullName>No_of_Competitors__c</fullName>
    <description>Count of Competitors (Account Roles with Type Competitor), calculated through DLRS</description>
    <label># Competitors</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>