Agentforce/force-app/main/default/objects/Opportunity/fields/No_of_Days_2_2_Needs_Analysis__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_2_2_Needs_Analysis__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated by DLRS</description>
    <label># Days - 2.2 Needs Analysis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>