Agentforce/force-app/main/default/objects/Opportunity/fields/No_of_Days_2_3_Pursuing__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_2_3_Pursuing__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated by DLRS</description>
    <label># Days - 2.3 Pursuing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>