Agentforce/force-app/main/default/objects/Opportunity/fields/No_of_Days_2_Prospect__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_2_Prospect__c</fullName>
    <description>No of Days at 2. Prospect</description>
    <formula>No_of_Days_2_2_Needs_Analysis__c +  No_of_Days_2_3_Pursuing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days - 2. Prospect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>