Agentforce/force-app/main/default/objects/Opportunity/fields/No_of_Days_3_1_RFI_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_3_1_RFI_In_Progress__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated by DLRS</description>
    <label># Days - 3.1 RFI In Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>