Agentforce/force-app/main/default/objects/Opportunity/fields/No_of_Days_3_2_RFI_Submitted__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_3_2_RFI_Submitted__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated by DLRS</description>
    <label># Days - 3.2 RFI Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>