Agentforce/force-app/main/default/objects/Opportunity/fields/No_of_Days_3_Solution__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_3_Solution__c</fullName>
    <description>No of Days at 3. Solution</description>
    <formula>No_of_Days_3_1_RFI_In_Progress__c +  No_of_Days_3_2_RFI_Submitted__c +  No_of_Days_3_3_Develop_Solution__c +  No_of_Days_3_4_Solution_Submitted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days - 3. Solution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>