Agentforce/force-app/main/default/objects/Opportunity/fields/No_of_Days_4_1_Presentation__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_4_1_Presentation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated by DLRS</description>
    <label># Days - 4.1 Presentation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>